# Emailing

./: .gitignore
5_custom_framework/0_litellm/: litellm_config.yaml
5_custom_framework/1_mcp/: .env.example  README.md  pyproject.toml  server.py
5_custom_framework/1_mcp/tools/: __init__.py
5_custom_framework/2_ai_framework/: .env.example  README.md  pyproject.toml
5_custom_framework/2_ai_framework/src/agents/: plan_execute_agent.py  react_agent.py
5_custom_framework/2_ai_framework/src/clients/: llm_client.py  (+1 more)
email_assistant/: README.md  _amount_open_report.xlsx  _amount_open_report_test.xlsx  _failed_report.xlsx  _log.xlsx  _queue.xlsx  _reconciliation_report.csv  _sent_report.xlsx  analyze_reconciliation.py  check_db.py  extract_pdf_amounts.py  main.py  pyproject.toml  query_duplicates.py  query_item_41181200.py  register_task_scheduler.ps1  reset_missing_from_reconciliation.py  reset_processing_state.py  run_email_assistant.ps1  smtp_ad_hoc_test.py  smtp_probe.py
email_assistant/data/: query.sql
email_assistant_v2/: .env.example  docker-compose.yml  litellm_config.yaml  main.py
email_assistant_v2/src/agents/: email_workflow_agent.py
email_assistant_v2/src/clients/: llm_client.py
email_assistant_v3/: README.md  main.py  pyproject.toml
email_assistant_v3/src/: models.py  settings.py  utils.py
email_assistant_v3/src/agents/: base_agent.py  database_agent.py  email_agent.py  orchestrator.py  sharepoint_agent.py
email_assistant_v3/src/clients/: mcp_client.py
email_assistant_v3/src/mcp_server/: server.py
email_assistant_v3/src/mcp_server/tools/: database.py  pdf_tools.py
(+3 files in other folders)
